[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "near-langchain-event-listener"
version = "0.1.1"
description = "LangChain tools for NEAR blockchain event subscriptions with filtering and reliable reconnection"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Mastrophot", email = "butrikmax@gmail.com" }
]
keywords = ["near", "langchain", "events", "listener", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "httpx>=0.27.0",
  "langchain-core>=0.2.30",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.0"
]

[project.urls]
Homepage = "https://github.com/mastrophot/near-langchain-event-listener"
Repository = "https://github.com/mastrophot/near-langchain-event-listener"
Issues = "https://github.com/mastrophot/near-langchain-event-listener/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/near_langchain_event_listener"]

[tool.pytest.ini_options]
testpaths = ["tests"]
